tests/snapshots/tui_snapshot__tui_single_assistant_message.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>  mode: default


















      Hello from the assistant.
  ╭ think off · Enter send · \+Enter newline · @file context ────────────────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Tokens: 0 in / 0 out  |  Persist: balanced  |  Ctrl+C quit
