tests/snapshots/tui_snapshot__tui_single_user_message.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>  mode: default
  ctrl+l: model  ctrl+o: tools  shift+tab: mode  /help


  › Hello, Pi!
  ╭ think off · Enter send · Shift+Enter newline · @file context ────────────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯

  Tokens: 0 in / 0 out  |  Persist: balanced  |  Ctrl+C quit
