tests/snapshots/tui_snapshot__tui_streaming_thinking.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>
  ctrl+l: model  ctrl+o: detail  shift+tab: mode  /help














  Assistant:
  Thinking: Considering options...
  Partial answer.
    Working (0s · esc to interrupt)
  ╭ default · think off · Enter send · \+Enter newline · @file context ──────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Tokens: 0 in / 0 out  |  Ctrl+C quit
