tests/snapshots/tui_snapshot__tui_thinking_toggled_visible.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Kode (dummy/dummy-model)  <cwd>  mode: default
  ctrl+l: model  ctrl+o: tools  shift+tab: mode  /help
  0 skills  0 prompts  0 themes  0 extensions  (0 resources ready)


  Thinking: Reasoning now visible.
  ●
      Answer after toggle.

  Thinking shown
  ╭ think off ───────────────────────────────────────────────────────────────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯

  <cwd>  |  0/0 tokens  |  Persist: balanced  |  /help  |  Ctrl+C...
